--- a/index.html
+++ b/index.html
@@ -3,130 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming website</title>
+    <title>Project Multiverse | The World Beyond Worlds</title>
     <link rel="stylesheet" href="style1.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="font-1.css">
 </head>
 <body>
     <!-- HEADER SECTION -->
     <div class="container">
         <header>
-            <!--LEFT PART OF HEADER (CONTAIL LOGO AND BUTTON)-->
+            <!--LEFT PART OF HEADER (CONTAIN LOGO AND BUTTON)-->
             <div class="head-left">
                 <img src="img/logo.png" alt="Logo">
-                <button>join</button>
+                <button>Join Now</button>
             </div>
-            <!--RIGHT PART OF HEADER (CONTAIN CHARACTER BUTTON )-->
-            <div class="head-right">
-                <!-- you need to put you page url in the href by replacing the # symbol and your character name by replacing omkar name -->
-                <p><a href="#">omakar</a></p>
-                <p><a href="#">omakar</a></p>
-                <p><a href="#">omakar</a></p>
-                <p><a href="#">omakar</a></p>
-                <p><a href="#">omakar</a></p>
 
+            <!--RIGHT PART OF HEADER (CONTAIN CHARACTER BUTTONS)-->
+            <div class="head-right">
+                <!-- Replace # with your actual page URLs -->
+                <p><a href="AKASH/akash.html">Akash</a></p>
+                <p><a href="OMKAR/omkar.html">Omkar</a></p>
+                <p><a href="LOKESH/lokesh.html">Lokesh</a></p>
+                <p><a href="OM/om.html">Om</a></p>
+                <p><a href="PUSHKAR/pushkar.html">Pushkar</a></p>
             </div>
         </header>
-        <!--HERO SECTION -->
-        <section class="hero-section autoBlur">
-            <div class="hero-vid"> <!---CONTAIN THE VIDEO OF THE HERO SECTION(CONTAINER FOR VIDEO AND OVERLAY )-->
-                <video loop autoplay muted playsinline  class="hero-video"><source src="videos/hero-1.mp4" type="video/mp4"></video>
-                <!--OVERLAY TEXT ON VIDEO AND BUTTON-->
-                <div class="hero-info">
-                    <h1>
-                        oopal
-                    </h1>
-                    <p>
-                        a world with infinite possibilities
-                    </p>
-                    <button>warriores</button>
-                </div>
-                <h1 class="gaming-text">heroes</h1> <!--LARGE DECORATIE TEXT AT THE LAST -->
-                <div class="next-btn">ENTER</div> <!--BUTTON ON THE SECREE TO CHAGE THE VIDEOS AFTER CLICKING-->
 
+        <!-- HERO SECTION -->
+        <section class="hero-section autoBlur">
+            <div class="hero-vid">
+                <video loop autoplay muted playsinline class="hero-video">
+                    <source src="videos/hero-1.mp4" type="video/mp4">
+                </video>
+
+                <!-- OVERLAY TEXT ON VIDEO -->
+                <div class="hero-info">
+                    <h1>PROJECT MULTIVERSE</h1>
+                    <p>The gateway to infinite realities — where heroes rise beyond limits.</p>
+                    <button>Enter the Multiverse</button>
+                </div>
+
+                <!-- <h1 class="gaming-text">Multiverse</h1> -->
+                <div class="next-btn">ENTER</div>
             </div>
-            <!--ABOUT SECTION -->
         </section>
+
+        <!-- ABOUT SECTION -->
         <section id="about" class="about-section">
-            <p> Welcome to Oopal</p> <!-- INTRO PARAGRAPH-->
+            <p>Welcome to Project Multiverse</p>
             <div class="autoBlur">
-            <h1>DISCOVER THE HEROES AND THEIR ADVENTURE</h1> <!--ABOUT SECTION HEADING-->
+                <h1>DISCOVER HEROES. EXPLORE DIMENSIONS. CHANGE REALITY.</h1>
             </div>
+
             <img class="stones-img" src="img/stones.png" alt="stones-image">
+
             <div class="image-box autoTakeFull">
-                <img src="img/about.webp" alt="about-img"> <!-- IMAGE FOR ABOUT SECTION -->
-            </div> <!--SUBHEADING-->
-            <h4>The Game of Games begins — embark on an epic MMORPG adventure!</h4>
-            <h5>Oopal showcases legendary heroes who maintain balance in the universe, vanquish monsters, and protect life</h5>
+                <img src="img/about.webp" alt="about-img">
+            </div>
+
+            <h4>The ultimate adventure begins — where every choice creates a new world.</h4>
+            <h5>
+                Project Multiverse brings together legendary heroes from parallel universes — 
+                each fighting to restore balance and protect existence itself.
+            </h5>
         </section>
-        <!--SECTION INFO , HERO CARD-->
-        <section class="section-info">
-          <h3>Explore the World of Oopal</h3> <!--SECTION HEADING-->
-            <p>A hub where every heroes journey is revealed — from ordinary lives to legendary feats</p>
-              <!--CARDS INFO AND VIDEOS-->
+
+        <!-- SECTION INFO (HERO CARDS) -->
+        <section class="section-info" id="card-sec">
+            <h3>Meet the Heroes of the Multiverse</h3>
+            <p>From hidden hackers to cosmic guardians — every hero carries a story that shapes the destiny of worlds.</p>
+
             <div class="info-cards">
                 <div class="card autoDisplay">
-                   <h1>Shadow Hacker</h1>
-                        <p>Master of stealth and technology, Om protects the innocent and fights unseen threats.</p>
-                    <video src="videos/feature-1.mp4" autoplay loop muted plays-inline ></video>
-                    <button>coming soon</button>
-                </div>
-                      <div class="card autoDisplay">
-                    <h1> monster hacker</h1>
-                    <p>A super hero that save the life of the people that stuck inthe problems</p>
-                    <video src="videos/feature-2.mp4" autoplay loop muted plays-inline ></video>
-                    <button>coming soon</button>
-                </div>
-                      <div class="card autoDisplay">
-                    <h1> RADIANT</h1>
-                    <p>A super hero that save the life of the people that stuck inthe problems</p>
-                    <video src="videos/feature-3.mp4" autoplay loop muted plays-inline ></video>
-                    <button>coming soon</button>
-                </div>
-                      <div class="card autoDisplay">
-                    <video src="videos/feature-4.mp4" autoplay loop muted plays-inline ></video>
-                </div>
-                      <div class="card autoDisplay">
-                    <video src="videos/feature-5.mp4" autoplay loop muted plays-inline ></video>
-                </div>
-                    <div class="card  autoDisplay">
-                     <h1>MORE COMING SOON </h1> <!--PLACEHOLDER FOR THE FUTURE HEROES-->
+                    <h1>SPIDER MAN</h1>
+                    <p>A silent guardian of the cyber realm — master of code and chaos, defending reality from digital threats.</p>
+                    <video src="videos/feature-1.mp4" autoplay loop muted plays-inline></video>
+                    <button>view</button>
                 </div>
 
+                <div class="card autoDisplay">
+                    <h1>IRON MAN</h1>
+                    <p>A fearless warrior who hunts creatures from fractured worlds, restoring peace one battle at a time.</p>
+                    <video src="videos/feature-2.mp4" autoplay loop muted plays-inline></video>
+                    <button>view</button>
+                </div>
+
+                <div class="card autoDisplay">
+                    <h1>THOR</h1>
+                    <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
+                    <video src="videos/feature-3.mp4" autoplay loop muted plays-inline></video>
+                    <button>view</button>
+                </div>
+
+                <div class="card autoDisplay">
+                                        <h1>THOR</h1>
+                    <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
+                    <video src="videos/feature-4.mp4" autoplay loop muted plays-inline></video>
+                    <button>view</button>
+                </div>
+
+                <div class="card autoDisplay">
+                                        <h1>THOR</h1>
+                    <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
+                    <video src="videos/feature-5.mp4" autoplay loop muted plays-inline></video>
+                    <button>view</button>
+                </div>
+
+                <div class="card autoDisplay">
+                    <h1>More Heroes Coming Soon...</h1>
+                </div>
             </div>
         </section>
-        <!--CONTACT SECTION-->
 
-
+        <!-- CONTACT SECTION -->
         <section class="contact-section">
-           <p>Join Oopal Today</p> <!--CALL TO ACTION -->
-                <div class="autoBlur">
-                    <h1>Shape the Future of Gaming Together</h1> <!--CALL TO ACTION HEADING-->
-                </div>
-            <button>Join Us</button>
-            <!--DECORATIVE IMAGES AROUND THE TEXT -->
-              <img class="img1" src="img/swordman.webp" alt="contact-img">
-              <img class="img2" src="img/contact-1.webp" alt="contact-img">
-              <img class="img3" src="img/contact-2.webp" alt="contact-img">
+            <p>Join Project Multiverse Today</p>
+            <div class="autoBlur">
+                <h1>Be a Creator, Not Just a Player</h1>
+            </div>
+            <button>Join the Mission</button>
+
+            <img class="img1" src="img/swordman.webp" alt="contact-img">
+            <img class="img2" src="img/contact-1.webp" alt="contact-img">
+            <img class="img3" src="img/contact-2.webp" alt="contact-img">
         </section>
-<!--FOOTER SECTION -->
-      <footer class="footer">
-    <p>© 2025 Project X-5 | All Rights Reserved</p>
-    <ul class="footer-icons"> <!--TEAM MEMBER ICONS-->
-        <li><a href="#" title="Akash"><i class='bx bx-wink-tongue'></i></a></li>
-        <li><a href="#" title="Omkar"><i class='bx bx-wink-tongue'></i></a></li>
-        <li><a href="#" title="Lokesh"><i class='bx bx-wink-tongue'></i></a></li>
-        <li><a href="#" title="Om"><i class='bx bx-wink-tongue'></i></a></li>
-        <li><a href="#" title="Pushkar"><i class='bx bx-wink-tongue'></i></a></li>
-    </ul>
-</footer>
-    </div> <!--END OF CONTAINER DIV-->
-    
 
+        <!-- FOOTER SECTION -->
+        <footer class="footer">
+            <p>© 2025 Project Multiverse | All Rights Reserved</p>
+            <ul class="footer-icons">
+                <li><a href="#" title="Akash"><i class='bx bx-wink-tongue'></i></a></li>
+                <li><a href="#" title="Omkar"><i class='bx bx-wink-tongue'></i></a></li>
+                <li><a href="#" title="Lokesh"><i class='bx bx-wink-tongue'></i></a></li>
+                <li><a href="#" title="Om"><i class='bx bx-wink-tongue'></i></a></li>
+                <li><a href="#" title="Pushkar"><i class='bx bx-wink-tongue'></i></a></li>
+            </ul>
+        </footer>
+    </div>
 
-<!--EXTERNAL JS FILE-->
-<script src="script.js"></script>
+    <!-- EXTERNAL JS FILE -->
+    <script src="script.js"></script>
 </body>
 </html>
