--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
             </div>
 
             <!--RIGHT PART OF HEADER (CONTAIN CHARACTER BUTTONS)-->
+            <!-- TEAM MEMBER you need to change your name by your character name that you are selected and also update the links by your html file path links  -->
             <div class="head-right">
                 <!-- Replace # with your actual page URLs -->
-                <p><a href="AKASH/akash.html">Akash</a></p>
-                <p><a href="OMKAR/omkar.html">Omkar</a></p>
-                <p><a href="LOKESH/lokesh.html">Lokesh</a></p>
-                <p><a href="OM/om.html">Om</a></p>
-                <p><a href="PUSHKAR/pushkar.html">Pushkar</a></p>
+                <p><a href="AKASH/akash.html">SPIDER-MAN</a></p>
+                <p><a href="OMKAR/omkar.html">OMKAR</a></p>
+                <p><a href="LOKESH/lokesh.html">LOKESH</a></p>
+                <p><a href="OM/om.html">OM</a></p>
+                <p><a href="PUSHKAR/pushkar.html">PUSHKAR</a></p>
             </div>
         </header>
 
@@ -71,44 +72,45 @@
         </section>
 
         <!-- SECTION INFO (HERO CARDS) -->
+         <!-- every team member should put you character info here and also you need to put the videos or photos that relate to you character that you are selected  -->
         <section class="section-info" id="card-sec">
             <h3>Meet the Heroes of the Multiverse</h3>
             <p>From hidden hackers to cosmic guardians — every hero carries a story that shapes the destiny of worlds.</p>
-
+<!-- TEAM MEMBERS ---< you need to update this section with your character info and also add the link and the videos in thet given spot  -->
             <div class="info-cards">
                 <div class="card autoDisplay">
-                    <h1>SPIDER MAN</h1>
-                    <p>A silent guardian of the cyber realm — master of code and chaos, defending reality from digital threats.</p>
+                    <h1>SPIDER-MAN</h1>
+                    <p>With great power comes great responsibility - the legend of Spider-Man continues to inspire courage, sacrifice, and hope</p>
                     <video src="videos/feature-1.mp4" autoplay loop muted plays-inline></video>
-                    <button>view</button>
+                    <button onclick="window.location.href='../AKASH/akash.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
                     <h1>IRON MAN</h1>
                     <p>A fearless warrior who hunts creatures from fractured worlds, restoring peace one battle at a time.</p>
                     <video src="videos/feature-2.mp4" autoplay loop muted plays-inline></video>
-                    <button>view</button>
+                    <button onclick="window.location.href='about.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
                     <h1>THOR</h1>
                     <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
                     <video src="videos/feature-3.mp4" autoplay loop muted plays-inline></video>
-                    <button>view</button>
+                    <button onclick="window.location.href='about.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
-                                        <h1>THOR</h1>
+                    <h1>DR.STRANGE</h1>
                     <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
                     <video src="videos/feature-4.mp4" autoplay loop muted plays-inline></video>
-                    <button>view</button>
+                    <button onclick="window.location.href='about.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
-                                        <h1>THOR</h1>
+                                        <h1>THOR..?</h1>
                     <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
                     <video src="videos/feature-5.mp4" autoplay loop muted plays-inline></video>
-                    <button>view</button>
+                    <button onclick="window.location.href='about.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
