files add and some are modified

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="font-1.css">
 </head>
+
 <body>
     <!-- HEADER SECTION -->
     <div class="container">
@@ -25,7 +27,7 @@
             <div class="head-right">
                 <!-- Replace # with your actual page URLs -->
                 <p><a href="AKASH/akash.html">SPIDER-MAN</a></p>
-                <p><a href="OMKAR/omkar.html">OMKAR</a></p>
+                <p><a href="omkar\styles.css\omkar.html">OMKAR</a></p>
                 <p><a href="LOKESH/lokesh.html">LOKESH</a></p>
                 <p><a href="OM/om.html">OM</a></p>
                 <p><a href="PUSHKAR/pushkar.html">PUSHKAR</a></p>
@@ -66,17 +68,16 @@
 
             <h4>The ultimate adventure begins — where every choice creates a new world.</h4>
             <h5>
-                Project Multiverse brings together legendary heroes from parallel universes — 
-                each fighting to restore balance and protect existence itself.
+                Project Multiverse brings together legendary heroes from parallel universes — each fighting to restore balance and protect existence itself.
             </h5>
         </section>
 
         <!-- SECTION INFO (HERO CARDS) -->
-         <!-- every team member should put you character info here and also you need to put the videos or photos that relate to you character that you are selected  -->
+        <!-- every team member should put you character info here and also you need to put the videos or photos that relate to you character that you are selected  -->
         <section class="section-info" id="card-sec">
             <h3>Meet the Heroes of the Multiverse</h3>
             <p>From hidden hackers to cosmic guardians — every hero carries a story that shapes the destiny of worlds.</p>
-<!-- TEAM MEMBERS ---< you need to update this section with your character info and also add the link and the videos in thet given spot  -->
+            <!-- TEAM MEMBERS ---< you need to update this section with your character info and also add the link and the videos in thet given spot  -->
             <div class="info-cards">
                 <div class="card autoDisplay">
                     <h1>SPIDER-MAN</h1>
@@ -107,7 +108,7 @@
                 </div>
 
                 <div class="card autoDisplay">
-                                        <h1>THOR..?</h1>
+                    <h1>THOR..?</h1>
                     <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
                     <video src="videos/feature-5.mp4" autoplay loop muted plays-inline></video>
                     <button onclick="window.location.href='about.html'">view</button>
@@ -148,4 +149,5 @@
     <!-- EXTERNAL JS FILE -->
     <script src="script.js"></script>
 </body>
+
 </html>
