files add and some are modified

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="head-right">
                 <!-- Replace # with your actual page URLs -->
                 <p><a href="AKASH/akash.html">SPIDER-MAN</a></p>
-                <p><a href="omkar\styles.css\omkar.html">OMKAR</a></p>
+                <p><a href="omkar/styles.css/omkar.html">OMKAR</a></p>
                 <p><a href="LOKESH/lokesh.html">LOKESH</a></p>
                 <p><a href="OM/om.html">OM</a></p>
                 <p><a href="PUSHKAR/pushkar.html">PUSHKAR</a></p>
@@ -83,7 +83,7 @@
                     <h1>SPIDER-MAN</h1>
                     <p>With great power comes great responsibility - the legend of Spider-Man continues to inspire courage, sacrifice, and hope</p>
                     <video src="videos/feature-1.mp4" autoplay loop muted plays-inline></video>
-                    <button onclick="window.location.href='../AKASH/akash.html'">view</button>
+                    <a href="../AKASH/akash.html"><button>View</button></a>
                 </div>
 
                 <div class="card autoDisplay">
@@ -111,7 +111,7 @@
                     <h1>THOR..?</h1>
                     <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
                     <video src="videos/feature-5.mp4" autoplay loop muted plays-inline></video>
-                    <button onclick="window.location.href='about.html'">view</button>
+                    <button onclick="window.location.href='omkar/styles.css/omkar.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
