files are added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p><a href="omkar/styles.css/omkar.html">OMKAR</a></p>
                 <p><a href="LOKESH/lokesh.html">LOKESH</a></p>
                 <p><a href="OM/om.html">OM</a></p>
-                <p><a href="PUSHKAR/pushkar.html">PUSHKAR</a></p>
+                <p><a href="pushkar/index.html">PUSHKAR</a></p>
             </div>
         </header>
 
@@ -83,7 +83,7 @@
                     <h1>SPIDER-MAN</h1>
                     <p>With great power comes great responsibility - the legend of Spider-Man continues to inspire courage, sacrifice, and hope</p>
                     <video src="videos/feature-1.mp4" autoplay loop muted plays-inline></video>
-                    <a href="../AKASH/akash.html"><button>View</button></a>
+                    <button onclick="window.location.href='AKASH/akash.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
@@ -97,14 +97,14 @@
                     <h1>THOR</h1>
                     <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
                     <video src="videos/feature-3.mp4" autoplay loop muted plays-inline></video>
-                    <button onclick="window.location.href='about.html'">view</button>
+                    <button onclick="window.location.href='omkar/styles.css/omkar.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
                     <h1>DR.STRANGE</h1>
                     <p>The light of the Multiverse — a being of pure energy who fights darkness across time and space.</p>
                     <video src="videos/feature-4.mp4" autoplay loop muted plays-inline></video>
-                    <button onclick="window.location.href='about.html'">view</button>
+                    <button onclick="window.location.href='pushkar/index.html'">view</button>
                 </div>
 
                 <div class="card autoDisplay">
